# qwowl35

./: .gitignore  Cargo.toml  LICENSE.md  MODEL_CARD.md  Makefile  README.md  download_model.sh
packaging/: README.md  qw35.spec  (+3 more)
qw35-server/: Cargo.toml  build.rs
qw35-server/src/: gf4_sidecar.rs  gguf.rs  graph.rs  lib.rs  main.rs  model.rs  server.rs  tokenizer.rs  toolcall.rs
qw35-server/src/loader/: cursor.rs  metadata.rs  mmap.rs  mod.rs  tensors.rs
qw35-server/src/metal/: bridge.rs  mod.rs  qw35_attention.metal  qw35_common.metal  qw35_core.metal  qw35_gf2.metal  qw35_gf4.metal  qw35_matvec.metal  qw35_output.metal  qw35_ssm.metal  qw35_tiled_mm.metal  qw35_types.metal
qw35-server/src/metal/bridge/: Qw35FFI.h  Qw35FFI.m  Qw35MetalRuntime+Attention.m  Qw35MetalRuntime+FFN.m  Qw35MetalRuntime+Internal.h  Qw35MetalRuntime+Output.m  Qw35MetalRuntime+SSM.m  Qw35MetalRuntime.h  Qw35MetalRuntime.m  Qw35MetalTypes.h  Qw35PipelineCache.h  Qw35PipelineCache.m  Qw35TensorStore.h  Qw35TensorStore.m
qw35-server/src/model/: prompt.rs  sampling.rs  stop_sequence.rs  text_filter.rs  think_budget.rs  tool_penalty.rs
qw35-server/src/reranker/: mod.rs  prompt.rs
qw35-server/src/tests/: graph.rs  metal_bridge.rs  model.rs  model_checkpoints.rs  model_prompt.rs  model_sampling.rs  model_stop_sequence.rs  model_text_filter.rs  model_think_budget.rs  model_tool_penalty.rs  reranker.rs  reranker_prompt.rs  server_enable_thinking.rs  server_mode.rs  server_rerank.rs  server_thinking_budget.rs  server_tool_gate.rs  tokenizer.rs  toolcall.rs
qw35-server/tests/: human_http.rs
(+279 files in other folders)
